# qt-mirror

./: CMakeLists.txt  README.md
src/: main.cpp  main_window.cpp  main_window.hpp
src/widgets/: widgets.hpp
src/widgets/analog_clock/: analog_clock.cpp  analog_clock.hpp
src/widgets/calendar_events/: goole_calendar_events.cpp  goole_calendar_events.hpp
src/widgets/date/: date.cpp  date.hpp
src/widgets/digital_clock/: digital_clock.cpp  digital_clock.hpp
src/widgets/habit_tracker/: habit_tracker.cpp  habit_tracker.hpp
src/widgets/weather/: weather.cpp  weather.hpp
